<resources>
    <string name="app_name">Lesson1_month4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="home">Home</string>
    <string name="task">Введите значение</string>
    <string name="regular">Регулярность</string>
    <string name="date">Дата</string>
    <string name="applyBtn">Принять</string>
    <string name="регулярность">Регулярность</string>
    <string name="каждый_день">Каждый день</string>
    <string name="каждую_неделю">Каждую неделю</string>
    <string name="каждый_месяц">Каждый месяц</string>
    <string name="каждый_год">Каждый год</string>
    <string name="отменить">Отменить</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="next_button">дальше</string>
    <string name="главное">Главное</string>
    <string name="registration">зарегистрироваться</string>
    <string name="code">Введите код</string>
    <string name="number">Введите номер телефона</string>
    <string name="life_track">LifeTrack</string>
    <string name="send_number">отправить номер</string>
    <string name="send_code">отправить код</string>
</resources>