<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".CreateTaskFragment">

    <EditText
        android:id="@+id/edt_task"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:hint="@string/task"
        android:layout_height="wrap_content"
      />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dateBtn"
            android:text="@string/date"
            android:layout_marginEnd="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/regularBtn"
            android:text="@string/regular"
            android:layout_marginStart="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <Button
        android:id="@+id/applyBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/applyBtn"/>


</LinearLayout>