<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/regular"
            android:layout_weight="1"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="24sp"/>



    </LinearLayout>

</LinearLayout>